Prevent message list from being stretched to fill viewport height

--- a/ui/less/app.less
+++ b/ui/less/app.less
@@ -56,7 +56,7 @@ h1 {
     }
 }
 
-#messageListBody {
+#messages {
     display: grid;
     grid-row-gap: 0.5em;
 
